--- a/apps/colina-care/package.json
+++ b/apps/colina-care/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "web",
+  "name": "colina-care",
   "version": "0.1.0",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --port 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@repo/shared-config": "*",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@types/node": "^20",
