--- a/apps/colina-care/tsconfig.json
+++ b/apps/colina-care/tsconfig.json
@@ -13,7 +13,7 @@
     "next-env.d.ts",
     "next.config.js",
     ".next/types/**/*.ts"
-  ],
+, "auth.ts"  ],
   "exclude": [
     "node_modules"
   ]
